--- a/.github/workflows/deploy_mdbook.yml
+++ b/.github/workflows/deploy_mdbook.yml
@@ -9,6 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install mdbook-skill-tree
+        run: cargo install --git https://github.com/nikomatsakis/skill-tree.git mdbook-skill-tree
+        continue-on-error: true # we don't care if this is already cached
+
+      - name: Install skill tree files
+        run: mdbook-skill-tree install
       - uses: XAMPPRocky/deploy-mdbook@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
